--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,1 +1,13 @@
+/Services/
+/.vscode/
+/App.class
+/Buildings/
+/City.class
+/Economy/
+/GameData.class
+/GamePanel.class
 /Infrastructure/
+/Main/
+/People/
+/Services/
+/Util/
